[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["Simon Heitin <simon.heitin@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pendulum = "^3.0.0"
pandas = "^2.2.2"
palmerpenguins = "^0.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
